<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/primary1">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/my_profile" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/gambar1"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:src="@drawable/gambar1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_img_bg"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/gambar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/danish"
            android:contentDescription="@string/profil_desc_img"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gambar2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="21dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Danish Maula Hasbi"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_tentang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/deskripsi"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/tv_tentang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/contact"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/kontak_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="21dp"
            android:focusable="true"
            android:clickable="true"
            app:cardBackgroundColor="@color/primary1"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_kontak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/kontak_2">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/linkedin" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/kontak_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardBackgroundColor="@color/primary1"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="@id/kontak_1"
            app:layout_constraintBottom_toBottomOf="@id/kontak_1"
            app:layout_constraintStart_toEndOf="@id/kontak_1"
            app:layout_constraintEnd_toStartOf="@id/kontak_3">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/github"
                android:src="@drawable/github" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kontak_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="42dp"
            app:cardBackgroundColor="@color/primary1"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="@id/kontak_2"
            app:layout_constraintBottom_toBottomOf="@id/kontak_2"
            app:layout_constraintStart_toEndOf="@id/kontak_2"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/gmail"
                android:src="@drawable/gmail" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            app:layout_constraintTop_toBottomOf="@id/kontak_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_linkedin"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/linkedin"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_github"/>

            <TextView
                android:id="@+id/tv_github"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/tv_linkedin"
                app:layout_constraintBottom_toBottomOf="@id/tv_linkedin"
                app:layout_constraintStart_toEndOf="@id/tv_linkedin"
                app:layout_constraintEnd_toStartOf="@id/tv_gmail" />

            <TextView
                android:id="@+id/tv_gmail"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/gmail"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/tv_github"
                app:layout_constraintBottom_toBottomOf="@id/tv_github"
                app:layout_constraintStart_toEndOf="@id/tv_github"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>